@@ -1,4 +1,5 @@
 # -*- coding: utf-8 -*-
+
 from trac.core import *
 from trac.web.chrome import add_stylesheet, ITemplateProvider
 from trac.web.api import IRequestFilter, ITemplateStreamFilter
@@ -10,13 +11,14 @@ from genshi.core import Markup
 from genshi.builder import tag
 from genshi.filters.transform import Transformer 
 
-from clients import model
+from clients.model import Client
 from StringIO import StringIO
 
 class ClientModule(Component):
     """Allows for tickets to be assigned to particular clients."""
     
-    implements(IRequestFilter, ITemplateStreamFilter, ITemplateProvider)
+    implements(IRequestFilter, ITemplateStreamFilter, ITemplateProvider,
+               ITicketManipulator)
     
     # IRequestFilter methods
     def pre_process_request(self, req, handler):
@@ -32,20 +34,24 @@ class ClientModule(Component):
         if req.path_info.startswith('/ticket/') or newticket:
             for field in data['fields']:
                 if 'client' == field['name']:
-                    field['type'] = 'select'
                     field['options'] = []
-                    for client in model.Client.select(self.env):
+                    for client in Client.select(self.env):
                         field['options'].append(client.name)
-                    if newticket:
-                        default_client = self.config.get('ticket', 'default_client')
-                        if default_client:
-                            data['ticket']['client'] = default_client
+                    if not field['options']:
+                        # Don't show field if there are no clients
+                        data['fields'].remove(field)
+                    else:
+                        field['type'] = 'select'
+                        if newticket:
+                            default_client = self.config.get('ticket', 'default_client')
+                            if default_client:
+                                data['ticket']['client'] = default_client
                     break;
         elif req.path_info.startswith('/query'):
             if data['fields'].has_key('client'):
                 data['fields']['client']['type'] = 'select'
                 data['fields']['client']['options'] = []
-                for client in model.Client.select(self.env):
+                for client in Client.select(self.env):
                     data['fields']['client']['options'].append(client.name)
         return template, data, content_type
     
@@ -66,7 +72,7 @@ class ClientModule(Component):
                 $('#field-client').change(function() {
                   """);
             script.write('var clientrates = new Array();')
-            for client in model.Client.select(self.env):
+            for client in Client.select(self.env):
                 script.write('clientrates["%s"] = %s;' % (client.name, client.default_rate or '""'))
             script.write("""
                   try { $('#field-clientrate').attr('value', clientrates[this.options[this.selectedIndex].value]); }
@@ -77,18 +83,12 @@ class ClientModule(Component):
             stream |= Transformer('.//head').append(tag.script(script.getvalue(), type_='text/javascript'))
         return stream
     
-    # ITemplateProvider
+    # ITemplateProvider methods
     def get_htdocs_dirs(self):
-        """Return the absolute path of a directory containing additional
-        static resources (such as images, style sheets, etc).
-        """
         from pkg_resources import resource_filename
         return [('clients', resource_filename(__name__, 'htdocs'))]
     
     def get_templates_dirs(self):
-        """Return the absolute path of the directory containing the provided
-        ClearSilver templates.
-        """
         from pkg_resources import resource_filename
         return [resource_filename(__name__, 'templates')]
     
@@ -97,8 +97,8 @@ class ClientModule(Component):
         pass
     
     def validate_ticket(self, req, ticket):
+        return ()
         # Todo validate client is valid
-        pass
         #if req.args.get('action') == 'resolve':
         #    links = TicketLinks(self.env, ticket)
         #    for i in links.blocked_by:
