@@ -1,0 +1,19 @@
+# -*- coding: utf-8 -*-
+#
+# Copyright (C) 2012 Ryan J Ollos <ryan.j.ollos@gmail.com>
+#
+# This software is licensed as described in the file COPYING, which
+# you should have received as part of this distribution.
+#
+
+import unittest
+
+
+def test_suite():
+    suite = unittest.TestSuite()
+    
+    import clients.tests.client
+    suite.addTest(clients.tests.client.test_suite())
+    
+    return suite
+
